--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>붉은거위 (redgoose)</title>
+  <title>붉은거위 / redgoose</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="redgoose"/>
   <meta name="keywords" content="redgoose 2d 3d photography graphic design case-study programing web 붉은거위 거위 portfolio drawing"/>
   <link rel="canonical" href="https://redgoose.me"/>
-  <meta property="og:site_name" content="붉은거위(redgoose)"/>
+  <meta property="og:site_name" content="붉은거위 / redgoose"/>
   <meta property="og:url" content="https://redgoose.me"/>
   <meta property="og:locale" content="ko_KR"/>
   <meta property="og:type" content="website"/>
@@ -18,15 +18,15 @@
   <meta name="mobile-web-app-capable" content="yes"/>
   <meta name="theme-color" content="currentColor">
   <meta name="description" content="붉은거위의 개인작업물 라이브러리. Redgoose personal work library"/>
-  <meta property="og:title" content="붉은거위(redgoose)"/>
+  <meta property="og:title" content="붉은거위 / redgoose"/>
   <meta property="og:description" content="붉은거위의 개인작업물 라이브러리. Redgoose personal work library">
   <meta property="og:image" content="/images/og-redgoose.jpg">
   <link rel="shortcut icon" href="/favicon.ico"/>
   <link rel="icon" href="/favicon.ico" />
-  <link rel="icon" type="image/x-icon" href="/images/redgoose_256x256.png"/>
-  <link rel="apple-touch-icon" href="/images/redgoose_256x256.png"/>
-  <link rel="apple-touch-startup-image" href="/images/redgoose_256x256.png"/>
-  <link rel="manifest" href="/manifest.json"/>
+  <link rel="icon" type="image/x-icon" href="/images/redgoose-512x512.png"/>
+  <link rel="apple-touch-icon" href="/images/redgoose-512x512.png"/>
+  <link rel="apple-touch-startup-image" href="/images/redgoose-512x512.png"/>
+  <link rel="manifest" href="/manifest.webmanifest"/>
   <script type="module" src="/src/main.ts" defer></script>
 </head>
 <body ontouchstart="">
