앱 아이콘 이미지 수정

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <meta property="og:image" content="/images/og-redgoose.jpg">
   <link rel="shortcut icon" href="/favicon.ico"/>
   <link rel="icon" href="/favicon.ico" />
-  <link rel="icon" type="image/x-icon" href="/images/redgoose-512x512.png"/>
-  <link rel="apple-touch-icon" href="/images/redgoose-512x512.png"/>
-  <link rel="apple-touch-startup-image" href="/images/redgoose-512x512.png"/>
+  <link rel="icon" type="image/x-icon" href="/images/redgoose-512x512.webp"/>
+  <link rel="apple-touch-icon" href="/images/redgoose-512x512.webp"/>
+  <link rel="apple-touch-startup-image" href="/images/redgoose-512x512.webp"/>
   <link rel="manifest" href="/manifest.webmanifest"/>
   <script type="module" src="/src/main.ts" defer></script>
 </head>
