스타일 정리
- 타입스크립트 제거

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link rel="apple-touch-icon" href="/images/redgoose-app-icon.webp"/>
 <link rel="apple-touch-startup-image" href="/images/redgoose-1024x1024.webp"/>
 <link rel="manifest" href="/manifest.webmanifest"/>
-<script type="module" src="/src/main.ts" defer></script>
+<script type="module" src="/src/main.js" defer></script>
 </head>
 <body ontouchstart="">
 <main id="app"></main>
