--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8"/>
-<title>붉은거위 / redgoose</title>
+<title>붉은거위 / redGoOSe</title>
 <meta name="viewport" content="width=device-width"/>
 <meta name="author" content="redgoose"/>
 <meta name="description" content="붉은거위의 개인작업물 라이브러리. Redgoose personal work library"/>
