클라이언트 본문 페이지 작업

--- a/client/index.html
+++ b/client/index.html
@@ -2,20 +2,20 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8"/>
-<title>붉은거위 / redGoOSe</title>
+<title>붉은거위 / GoOSe</title>
 <meta name="viewport" content="width=device-width"/>
-<meta name="author" content="redgoose"/>
-<meta name="description" content="붉은거위의 개인작업물 라이브러리. Redgoose personal work library"/>
-<meta name="keywords" content="redgoose 2d 3d photography graphic design case-study programing web 붉은거위 거위 portfolio drawing"/>
+<meta name="author" content="GoOSe"/>
+<meta name="description" content="붉은거위의 개인작업물 라이브러리. GoOSe personal work library"/>
+<meta name="keywords" content="redgoose goose 2d 3d photography graphic design case-study programing web 붉은거위 거위 portfolio drawing"/>
 <link rel="canonical" href="https://redgoose.me"/>
-<meta property="og:site_name" content="붉은거위 / redgoose"/>
+<meta property="og:site_name" content="붉은거위 / GoOSe"/>
 <meta property="og:url" content="https://redgoose.me"/>
 <meta property="og:locale" content="ko_KR"/>
 <meta property="og:type" content="website"/>
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="mobile-web-app-capable" content="yes"/>
 <meta name="theme-color" content="currentColor">
-<meta property="og:title" content="붉은거위 / redgoose"/>
+<meta property="og:title" content="붉은거위 / GoOSe"/>
 <meta property="og:description" content="붉은거위의 개인작업물 라이브러리. Redgoose personal work library">
 <meta property="og:image" content="/images/og-redgoose.jpg">
 <link rel="shortcut icon" href="/favicon.ico"/>
@@ -29,5 +29,6 @@
 </head>
 <body ontouchstart="">
 <main id="app"></main>
+<div id="modal"></div>
 </body>
 </html>
